<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/barCodeEditText"
			android:hint="@string/barCodeEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/creatorIdEditText"
			android:hint="@string/creatorIdEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/descriptionEditText"
			android:hint="@string/descriptionEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/idEditText"
			android:hint="@string/taskIdEditTextHint"/>
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/importanceIdSpinner" />
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/initialEstimatedHoursEditText"
			android:hint="@string/initialEstimatedHoursEditTextHint"/>
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/statusIdSpinner" />
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/taskCoordinatorEditText"
			android:hint="@string/taskCoordinatorEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/timeInHoursEditText"
			android:hint="@string/timeInHoursEditTextHint"/>
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/urgencyIdSpinner" />
	</LinearLayout>
</ScrollView>
