<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/actionTypeIdEditText"
			android:hint="@string/actionTypeIdEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/commentBodyEditText"
			android:hint="@string/commentBodyEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/commentTitleEditText"
			android:hint="@string/commentTitleEditTextHint"/>
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/employeeIdSpinner" />
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/idEditText"
			android:hint="@string/commentIdEditTextHint"/>
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/taskIdSpinner" />
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/taskTeamIdSpinner" />
	</LinearLayout>
</ScrollView>
