<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/employeeIdSpinner" />
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/gradeEditText"
			android:hint="@string/gradeEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/idEditText"
			android:hint="@string/taskEvaluationIdEditTextHint"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/remarksEditText"
			android:hint="@string/remarksEditTextHint"/>
		<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/taskIdSpinner" />
	</LinearLayout>
</ScrollView>
